--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
                     Email: support@mobirise.com
                     <br>Phone: +1 (0) 000 0000 001
                     <br>Fax: +1 (0) 000 0000 002
+                  <link rel="manifest" href="manifest.json"></link>
                 </p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
