--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
                     <br>Phone: +1 (0) 000 0000 001
                     <br>Fax: +1 (0) 000 0000 002
                   <link rel="manifest" href="manifest.json"></link>
+                  <link>https://github.com/boyofgreen/manUp.js/</link>
                 </p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
