--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
-  
+     <link rel="manifest" href="manifest.json"></link>
+ <script src="manup.min.js"></script>
   
 </head>
 <body>
@@ -136,8 +137,7 @@
                     Email: support@mobirise.com
                     <br>Phone: +1 (0) 000 0000 001
                     <br>Fax: +1 (0) 000 0000 002
-                  <link rel="manifest" href="manifest.json"></link>
-                  <link>https://github.com/boyofgreen/manUp.js/</link>
+               
                 </p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
